[gd_scene load_steps=2 format=3 uid="uid://dn1op7snkskba"]

[ext_resource type="Script" path="res://scripts/ui/inventory_ui.gd" id="1_inventory"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_inventory")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="MaterialsSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MaterialsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MaterialsSection"]
layout_mode = 2
text = "Materials:"

[node name="MaterialsGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/MaterialsSection"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="WeaponsSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WeaponsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/WeaponsSection"]
layout_mode = 2
text = "Weapons:"

[node name="WeaponsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/WeaponsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close (Tab)"
